fix jump on clingning

--- a/web/css/xneth/style.css
+++ b/web/css/xneth/style.css
@@ -813,7 +813,12 @@ h1 {
 
 #announce {
   text-align: center;
-  height: 35px;
+  height: 15px;
+  display: block;
+  margin-top: 10px;
+}
+#announce h2 {
+  margin: 0;
 }
 
 #announce span {
